homelab/tracing-demo/hotrod/tracing-demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tracing-demo
  labels:
    istio-injection: enabled
